# smart-bell-by-tizen

position-finder-server/: .cproject  .gitignore  .project  CMakeLists.txt  project_def.prop  settings  tizen-manifest.xml  tizen-manifest.xml.in
position-finder-server/.metadata/: version.ini
position-finder-server/.sign/: .manifest.tmp  author-signature.xml  signature1.xml
position-finder-server/inc/: connection_manager.h  connectivity.h  controller.h  controller_internal.h  controller_util.h  log.h  resource.h  resource_internal.h  smartbell.h  webutil.h
position-finder-server/inc/resource/: resource_1602A_LCD.h  resource_1602A_LCD_internal.h  resource_PCA9685.h  resource_active_buzzer.h  resource_active_buzzer_internal.h  resource_adc_mcp3008.h  resource_buzzer.h  resource_buzzer_internal.h  resource_camera.h  resource_flame_sensor.h  resource_flame_sensor_internal.h  resource_gas_detection_sensor.h  resource_gas_detection_sensor_internal.h  resource_illuminance_sensor.h  resource_illuminance_sensor_internal.h  resource_infrared_motion_sensor.h  resource_infrared_motion_sensor_internal.h  resource_infrared_obstacle_avoidance_sensor.h  resource_infrared_obstacle_avoidance_sensor_internal.h  resource_key_matrix.h  resource_led.h  resource_led_internal.h  resource_motor_driver_L298N.h  resource_motor_driver_L298N_internal.h  resource_motor_driver_ULN2003.h  resource_motor_driver_ULN2003_internal.h  resource_passive_buzzer.h  resource_passive_buzzer_internal.h  resource_rain_sensor.h  resource_rain_sensor_internal.h  resource_servo_motor.h  resource_servo_motor_internal.h  resource_sound_detection_sensor.h  resource_sound_detection_sensor_internal.h  resource_sound_level_sensor.h  resource_sound_level_sensor_internal.h  resource_tilt_sensor.h  resource_tilt_sensor_internal.h  resource_touch_sensor.h  resource_touch_sensor_internal.h  (+4 more)
position-finder-server/inc/smartbell/: smartbell_motor.h  smartbell_password.h  smartbell_setting.h  smartbell_socket.h  smartbell_timer.h  smartbell_unlock.h  smartbell_util.h
position-finder-server/packaging/: org.tizen.position-finder-server.spec
position-finder-server/res/: pi.conf
position-finder-server/src/: connection_manager.c  connectivity.c  controller.c  controller_internal.c  controller_util.c  resource.c  webutil.c
position-finder-server/src/resource/: resource_1602A_LCD.c  resource_PCA9685.c  resource_active_buzzer.c  resource_adc_mcp3008.c  resource_buzzer.c  resource_camera.c  resource_flame_sensor.c  resource_gas_detection_sensor.c  resource_illuminance_sensor.c  resource_infrared_motion_sensor.c  resource_infrared_obstacle_avoidance_sensor.c  resource_key_matrix.c  resource_led.c  resource_motor_driver_L298N.c  resource_motor_driver_ULN2003.c  resource_passive_buzzer.c  resource_rain_sensor.c  resource_servo_motor.c  resource_sound_detection_sensor.c  resource_sound_level_sensor.c  resource_tilt_sensor.c  resource_touch_sensor.c  resource_ultrasonic_sensor.c  resource_vibration_sensor.c
position-finder-server/src/smartbell/: smartbell_motor.c  smartbell_password.c  smartbell_setting.c  smartbell_socket.c  smartbell_timer.c  smartbell_unlock.c  (+2 more)
(+10 files in other folders)
